fixed the down button rotate on mobile

--- a/src/styles/_sections-mobile.scss
+++ b/src/styles/_sections-mobile.scss
@@ -134,7 +134,7 @@
       img{
         transform: rotate(180deg);
         &:hover{
-          transform: rotate(359deg);
+          transform: rotate(540deg);
           background-color: v.$whiteMain;
         }
       }
